# Vision_Based_Shape_Reconstruction

./: CMakeLists.txt  Camera.hpp  Global.hpp  Image_Process.hpp  Math.hpp  Net.hpp  README.md  array.hpp  camera.hpp  curve.hpp  global.hpp  image_process.hpp  main.cpp  mat.hpp  net.hpp  quat.hpp  vec.hpp
resources/: net.txt  train_common.py  train_compressor.py
resourses/: train_compressor.py  train_decompressor.py
